--- a/index.html
+++ b/index.html
@@ -5,10 +5,171 @@
         <meta name="description" content=" ">
         <meta name="keywords" content=" ">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>REPLICA P2</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/navbar.css">
+
 </head>
 <body>
-        
+        <header class="header">
+                <section class="header__section"> <!-- NUEVO -->
+                        <article class="header__logo">
+                                <a href="#">
+                                        <img src="img/logo.svg" alt="Logotipo de la empresa">
+                                </a>
+                        </article>
+                        <nav class="header__navigator">
+                                <ul>
+                                        <li><a href="#organize">Description</a></li>
+                                        <li><a href="#">Features</a></li>
+                                <li><a href="#">Screens</a></li>
+                                <li><a href="#">Extras</a></li>
+                                <li><a class="header__navigator-button" href="https://factoriaf5.org/" target="_blank">Download</a></li>
+                        </ul>
+                </nav>
+                </section>
+        </header>
+        <main>
+                <section class="presentacion">
+                        <article class="presentacion_figuras-arriba">
+                                <img src="img/decorative-green-diamond.svg" alt="">
+                                <img class="presentacion_figuras-arriba-circle" src="img/decorative-yellow-circle.svg" alt="">
+                        </article>
+                        <article class="presentacion__textos">
+                                <h1 data-aos="fade-up">Mobile App Landing Page</h1>
+                                <p>Start focusing on your goals and get more things done with Sync mobile application. It's the first app to harness the power of social connections to help you stay focused and get organized.</p>
+                        </article>
+                        <article class="presentacion__botones">
+                                <nav class="presentacion__botones__navigator">
+                                        <ul>
+                                                <li><a class="presentacion__botones__navigator-button" href="#"><i class="fa-brands fa-apple"></i> Download</a></li>
+                                                <li><a class="presentacion__botones__navigator-button" href="#"><i class="fa-brands fa-google-play"></i> Download</a></li>
+                                        </ul>
+                                </nav>
+                        </article>
+                        <article class="presentacion_figuras-abajo">
+                                <img src="img/decorative-blue-circle.svg" alt="">
+                        </article>
+                </section>
+                <section class="img__phone">
+                        <img src="img/header-iphone.png" alt="Phone">
+                </section>
+                <section class="social__iconos__colores">
+                        <div social__iconos__colores-alinear>
+                                <div id="social__iconos__colores-circulo-gente">
+                                        <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-gente.png" alt="">
+                                </div>
+                                <p><strong>Identify Goals</strong></p>
+                        </div>
+                        <div class="social__iconos__colores-alinear">
+                                <div id="social__iconos__colores-circulo-situation">
+                                        <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-situation.png" alt="">
+                                </div>
+                                <p><strong>Situation Analysis</strong></p>
+                        </div>
+                        <div class="social__iconos__colores-alinear">
+                                <div id="social__iconos__colores-circulo-settings">
+                                        <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-settings.png" alt="">
+                                </div>
+                                <p><strong>Tasks Settings</strong></p>
+                        </div>
+                        <div class="social__iconos__colores-alinear">
+                                <div id="social__iconos__colores-circulo-interaction">
+                                        <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-interaction.png" alt="">
+                                </div>
+                                <p><strong>Social Interaction</strong></p>
+                        </div>
+                        <div class="social__iconos__colores-alinear">
+                                <div id="social__iconos__colores-circulo-done">
+                                        <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-done.png" alt="">
+                                </div>
+                                <p><strong>Social Interaction</strong></p>
+                        </div>
+                </section>
+                <a id="organize"></a>
+                <section class="description">
+                        <article class="description__img">
+                                <img src="img/description-1-app.png" alt="">
+                        </article>
+                        <article class="description__text">
+                                <h2>
+                                        Organize Your Time And Start Getting Results
+                                </h2>
+                                <p>
+                                        Sync is the first mobile app on the market to harness the power of social connections to help you stop procrastinating and start getting things done. Give it a try and see the changes right away
+                                </p>
+                                <ul>
+                                        <li>Analyse and evaluate your current status and productivity</li>
+                                        <li>Begin monitoring your day to day routine with Sync app</li>
+                                        <li>See the improved results in no more than a couple of weeks</li>
+                                </ul>
+                                <div class="description__button">
+                                        <button>LIGTHBOX</button>
+                                </div>
+                        </article>
+                </section>
+                <section class="calendar">
+                        <div class="calendar__div">
+                                <article class="calendar__text">
+                                        <h2>
+                                                Organize Your Time And Start Getting Results
+                                        </h2>
+                                        <p>
+                                                <strong>Schedule tasks</strong> to keep track of their completion. Sync provides multiple scheduling options including alarms and reminders.
+                                        </p>
+                                        <ul>
+                                                <li>
+                                                        You can always add new tasks or change the settings of existing ones in your calendar view or the app control panel
+                                                </li>
+                                                <li>
+                                                        It's easy to stay focused on your most important daily activities that will get you closer to meeting your goals
+                                                </li>
+                                                <li>
+                                                        Use phone reminders to free up your long term memory which will reduce stress and make you more productive
+                                                </li>
+                                        </ul>
+                                        <div class="calendar__button">
+                                                <button class="calendar__button-terms">TERMS</button>&nbsp;
+                                                <button class="calendar__button-privacy">privacy</button>
+                                        </div>
+                                </article>
+                                <article class="calendar__img">
+                                        <img src="img/description-2-app.png" alt="">
+                                </article>
+                        </div>
+                </section>
+                <section class="user">
+                        <div class="user__div">
+                                <section>
+                                        <h2>User Testimonials</h2>
+                                </section>
+                                <section class="user__div-estrella">
+                                        <article class="user__div-estrella-estrellitas">
+                                                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                                                <hr>
+                                                <p>I love using Sync for my personal development needs. It meets all my requirements and it actually helps a lot with focusing skills.</p>
+                                                <h3>Rick Jones - Designer</h3>
+                                        </article>
+                                        <article class="user__div-estrella-estrellitas">
+                                                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                                                <hr>
+                                                <p>After trying out a large number of personal coaching apps I decided to give Sync a try and what a wonderful surprise it was.</p>
+                                                <h3>Lynda Marquez - Developer</h3>
+                                        </article>
+                                        <article class="user__div-estrella-estrellitas">
+                                                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                                                <hr>
+                                                <p>Never dreamed I could learn so fast how to focus on my personal goals and improve my life to levels I never thought possible.</p>
+                                                <h3>Jay Frisco - Marketer</h3>
+                                        </article>
+                                </section>
+                        </div>
+                </section>
+                <section class="smartphone">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia nisi quibusdam autem quis sit veritatis saepe magnam, eligendi repudiandae maiores itaque eaque rerum provident, quas sed recusandae aut quo voluptatem? Quidem, repellat ducimus? Modi provident et voluptates consequatur, officiis eos dolores maxime, reprehenderit ullam similique asperiores ad, numquam sed fugit. Tenetur tempore qui alias sed nesciunt veniam suscipit minus! Magni quam omnis itaque dicta ad et quae minima molestiae earum quisquam fuga, iste eum dolore autem incidunt ut doloremque tempore qui ullam neque cum suscipit cupiditate. Voluptates quis assumenda sed voluptatibus dignissimos esse hic itaque in velit inventore molestiae sint reprehenderit autem nisi nesciunt vel ad doloremque, at neque suscipit quaerat mollitia quae? Inventore repudiandae perspiciatis iure provident magnam repellendus quas rem voluptatem eius sapiente voluptas dolor architecto, dolorum laboriosam asperiores neque, vero repellat omnis alias ex corrupti atque sed voluptatum aspernatur. Exercitationem consequuntur excepturi numquam iure eligendi sapiente voluptatum asperiores quasi distinctio nisi soluta, perspiciatis dolorem hic molestias similique explicabo, dolore quia expedita! Quod totam debitis, velit esse cumque voluptates qui earum, quasi tenetur officiis itaque commodi asperiores maiores neque soluta eius magni, adipisci ipsam tempora? At sed enim deleniti, blanditiis rerum provident! Ea consequuntur quo porro totam dolorem dignissimos, doloribus provident quasi facere illum non adipisci magni, nesciunt possimus illo nulla. Enim, doloremque itaque. Eum laboriosam neque ipsam, adipisci aperiam aut architecto, amet, dolor facilis corporis modi doloremque minus blanditiis quam quasi soluta sit alias minima autem harum. Repellendus rem nemo quidem sequi dignissimos cupiditate officiis qui labore dolore quia aliquid quaerat enim voluptate suscipit error ipsa commodi iste minima et, laudantium earum praesentium animi? Corrupti enim quae vitae eaque voluptas nam rerum, obcaecati at accusantium atque architecto numquam laudantium a fuga labore ullam illum modi provident tempora sint soluta facilis. Dolore laudantium autem sequi fugit. Dolorem facere, aut soluta molestiae cumque voluptatibus quae sint impedit nesciunt recusandae quam deleniti magni, ducimus dicta odit nemo, officia id dolores. Assumenda voluptatibus sunt, adipisci quod ex blanditiis hic, amet consequatur doloremque perspiciatis mollitia eius iure debitis, at reiciendis et aspernatur soluta consectetur exercitationem. Commodi iure cum ea dolores natus quibusdam. Excepturi possimus magnam laudantium accusantium necessitatibus dolorum dolorem doloremque doloribus libero non ipsa hic pariatur labore ipsum delectus nulla sunt numquam velit harum officiis, consequuntur cupiditate praesentium. Ab cupiditate magnam nobis, illo pariatur perspiciatis autem quaerat omnis eius! Debitis fugit molestias, ab totam non modi excepturi repudiandae necessitatibus laboriosam similique fuga ex, deserunt eos enim explicabo quos, labore laborum nisi magnam suscipit error illum! Corrupti molestias quidem officiis odit minus. Mollitia facilis sit, amet ducimus cumque praesentium harum laborum molestias earum maiores placeat inventore ea consequuntur deleniti, alias, iste hic non ipsam. Molestias, enim. Enim necessitatibus animi perferendis, fuga recusandae libero labore odio possimus ex nisi, maxime, repudiandae atque quisquam obcaecati. Ratione dolores voluptatem assumenda? Non magni debitis quibusdam impedit veniam iure rerum illo rem ipsum vel voluptate repellendus, cumque omnis temporibus cum dignissimos dolor laborum, deleniti aperiam? Consectetur totam in animi vitae quidem voluptates eius cumque accusamus autem.</p>
+                </section>
+        </main>
+
 </body>
 </html>
