--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <img src="img/header-iphone.png" alt="Phone">
                 </section>
                 <section class="social__iconos__colores">
-                        <div social__iconos__colores-alinear>
+                        <div clas="social__iconos__colores-alinear">
                                 <div id="social__iconos__colores-circulo-gente">
                                         <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-gente.png" alt="">
                                 </div>
@@ -164,12 +164,98 @@
                                                 <h3>Jay Frisco - Marketer</h3>
                                         </article>
                                 </section>
+                                <section class="user__div-caja">
+                                        <article class="user__div-caja-img">
+                                                <img src="./img/customer-logo-1.png" alt="Logos">
+                                        </article>
+                                        <article class="user__div-caja-img">
+                                                <img src="./img/customer-logo-2.png" alt="Logos">
+                                        </article>
+                                        <article class="user__div-caja-img">
+                                                <img src="./img/customer-logo-3.png" alt="Logos">
+                                        </article>
+                                        <article class="user__div-caja-img">
+                                                <img src="./img/customer-logo-4.png" alt="Logos">
+                                        </article>
+                                        <article class="user__div-caja-img">
+                                                <img src="./img/customer-logo-5.png" alt="Logos">
+                                        </article>
+                                </section>
+                                <section class="user__div-estrella">
+                                        <article class="user__div-estrella-estrellitas">
+                                                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                                                <hr>
+                                                <p>I got so much value from using Sync in my daily life for which I am very grateful and would recommend it to everybody</p>
+                                                <h3>Frank Gibson - Manager</h3>
+                                        </article>
+                                        <article class="user__div-estrella-estrellitas">
+                                                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                                                <hr>
+                                                <p>If you have great goals but can't figure out a way to keep focused then you should definitely give Sync a try and see the results</p>
+                                                <h3>Rita Longmile - Designer</h3>
+                                        </article>
+                                        <article class="user__div-estrella-estrellitas">
+                                                <p><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></p>
+                                                <hr>
+                                                <p>I've been looking for a great organizer app for such a long time but now I am really happy that I found Sync. It's beeen working great</p>
+                                                <h3>Jones Smith - Developer</h3>
+                                        </article>
+                                </section>
                         </div>
                 </section>
-                <section class="smartphone">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quia nisi quibusdam autem quis sit veritatis saepe magnam, eligendi repudiandae maiores itaque eaque rerum provident, quas sed recusandae aut quo voluptatem? Quidem, repellat ducimus? Modi provident et voluptates consequatur, officiis eos dolores maxime, reprehenderit ullam similique asperiores ad, numquam sed fugit. Tenetur tempore qui alias sed nesciunt veniam suscipit minus! Magni quam omnis itaque dicta ad et quae minima molestiae earum quisquam fuga, iste eum dolore autem incidunt ut doloremque tempore qui ullam neque cum suscipit cupiditate. Voluptates quis assumenda sed voluptatibus dignissimos esse hic itaque in velit inventore molestiae sint reprehenderit autem nisi nesciunt vel ad doloremque, at neque suscipit quaerat mollitia quae? Inventore repudiandae perspiciatis iure provident magnam repellendus quas rem voluptatem eius sapiente voluptas dolor architecto, dolorum laboriosam asperiores neque, vero repellat omnis alias ex corrupti atque sed voluptatum aspernatur. Exercitationem consequuntur excepturi numquam iure eligendi sapiente voluptatum asperiores quasi distinctio nisi soluta, perspiciatis dolorem hic molestias similique explicabo, dolore quia expedita! Quod totam debitis, velit esse cumque voluptates qui earum, quasi tenetur officiis itaque commodi asperiores maiores neque soluta eius magni, adipisci ipsam tempora? At sed enim deleniti, blanditiis rerum provident! Ea consequuntur quo porro totam dolorem dignissimos, doloribus provident quasi facere illum non adipisci magni, nesciunt possimus illo nulla. Enim, doloremque itaque. Eum laboriosam neque ipsam, adipisci aperiam aut architecto, amet, dolor facilis corporis modi doloremque minus blanditiis quam quasi soluta sit alias minima autem harum. Repellendus rem nemo quidem sequi dignissimos cupiditate officiis qui labore dolore quia aliquid quaerat enim voluptate suscipit error ipsa commodi iste minima et, laudantium earum praesentium animi? Corrupti enim quae vitae eaque voluptas nam rerum, obcaecati at accusantium atque architecto numquam laudantium a fuga labore ullam illum modi provident tempora sint soluta facilis. Dolore laudantium autem sequi fugit. Dolorem facere, aut soluta molestiae cumque voluptatibus quae sint impedit nesciunt recusandae quam deleniti magni, ducimus dicta odit nemo, officia id dolores. Assumenda voluptatibus sunt, adipisci quod ex blanditiis hic, amet consequatur doloremque perspiciatis mollitia eius iure debitis, at reiciendis et aspernatur soluta consectetur exercitationem. Commodi iure cum ea dolores natus quibusdam. Excepturi possimus magnam laudantium accusantium necessitatibus dolorum dolorem doloremque doloribus libero non ipsa hic pariatur labore ipsum delectus nulla sunt numquam velit harum officiis, consequuntur cupiditate praesentium. Ab cupiditate magnam nobis, illo pariatur perspiciatis autem quaerat omnis eius! Debitis fugit molestias, ab totam non modi excepturi repudiandae necessitatibus laboriosam similique fuga ex, deserunt eos enim explicabo quos, labore laborum nisi magnam suscipit error illum! Corrupti molestias quidem officiis odit minus. Mollitia facilis sit, amet ducimus cumque praesentium harum laborum molestias earum maiores placeat inventore ea consequuntur deleniti, alias, iste hic non ipsam. Molestias, enim. Enim necessitatibus animi perferendis, fuga recusandae libero labore odio possimus ex nisi, maxime, repudiandae atque quisquam obcaecati. Ratione dolores voluptatem assumenda? Non magni debitis quibusdam impedit veniam iure rerum illo rem ipsum vel voluptate repellendus, cumque omnis temporibus cum dignissimos dolor laborum, deleniti aperiam? Consectetur totam in animi vitae quidem voluptates eius cumque accusamus autem.</p>
+                <section class="numeros">
+                        <div class="numeros__caja">
+                                <article class="numeros__caja-contenido">
+                                        <div><img src="./img/icono-gente.png" alt=""></div>
+                                        <h2>231</h2>
+                                        <p>Happy Users</p>
+                                </article>
+                                <article class="numeros__caja-contenido">
+                                        <div><img src="./img/icono-situation.png" alt=""></div>
+                                        <h2>385</h2>
+                                        <p>Issues Solved</p>
+                                </article>
+                                <article class="numeros__caja-contenido">
+                                        <div><img src="./img/icono-settings.png" alt=""></div>
+                                        <h2>159</h2>
+                                        <p>Good Reviews</p>
+                                </article>
+                                <article class="numeros__caja-contenido">
+                                        <div><img src="./img/icono-interaction.png" alt=""></div>
+                                        <h2>127</h2>
+                                        <p>Case Studies</p>
+                                </article>
+                                <article class="numeros__caja-contenido">
+                                        <div><img src="./img/icono-done.png" alt=""></div>
+                                        <h2>211</h2>
+                                        <p>Orders Received</p>
+                                </article>
+                        </div>
+                </section>
+                <section class="secondPhone">
+                        <div class="secondPhone__caja">
+                                <article class="secondPhone__rombo">
+                                        <img src="./img/decorative-green-diamond.svg" alt="">
+                                </article>
+                                <article class="secondPhone__caja-img">
+                                        <img src="./img/download-iphone.png" alt="">
+                                </article>
+                                <article class="secondPhone__caja-p">
+                                        <p>Do you feel like you're wasting time with small stuff instead of working towards your goals? Start using Sync to organize your time and get a grip on your personal development</p>
+                                </article>
+                                <article class="presentacion__botones">
+                                        <nav class="presentacion__botones__navigator">
+                                                <ul>
+                                                        <li><a class="presentacion__botones__navigator-button" href="#"><i class="fa-brands fa-apple"></i> Download</a></li>
+                                                        <li><a class="presentacion__botones__navigator-button" href="#"><i class="fa-brands fa-google-play"></i> Download</a></li>
+                                                </ul>
+                                        </nav>
+                                </article>
+                        </div>
                 </section>
         </main>
+        <footer>
 
+        </footer>
 </body>
 </html>
