--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <section class="header__section"> <!-- NUEVO -->
                         <article class="header__logo">
                                 <a href="#">
-                                        <img src="img/logo.svg" alt="Logotipo de la empresa">
+                                        <img class="animacionLogo" src="img/logo.svg" alt="Logotipo de la empresa">
                                 </a>
                         </article>
                         <nav class="header__navigator">
@@ -58,7 +58,7 @@
                 <section class="social__iconos__colores">
                         <div clas="social__iconos__colores-alinear">
                                 <div id="social__iconos__colores-circulo-gente">
-                                        <img class="social__iconos__colores-circulo-ampliar-img" src="img/icono-gente.png" alt="">
+                                        <img class="social__iconos__colores-circulo-ampliar-img darVueltas" src="img/icono-gente.png" alt="">
                                 </div>
                                 <p><strong>Identify Goals</strong></p>
                         </div>
@@ -254,8 +254,10 @@
                         </div>
                 </section>
         </main>
-        <footer>
-
-        </footer>
+        <!-- <footer class="footer">
+                <h2 class="hastaAquiLlegue">
+                        Hasta aqui llegue
+                </h2>
+        </footer> -->
 </body>
 </html>
