--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                         <nav class="header__navigator">
                                 <ul>
                                         <li><a href="#organize">Description</a></li>
-                                        <li><a href="#">Features</a></li>
-                                <li><a href="#">Screens</a></li>
-                                <li><a href="#">Extras</a></li>
-                                <li><a class="header__navigator-button" href="https://factoriaf5.org/" target="_blank">Download</a></li>
+                                        <li><a href="#features">Features</a></li>
+                                        <li><a href="#screen">Screens</a></li>
+                                        <li><a href="#extras">Extras</a></li>
+                                        <li><a class="header__navigator-button" href="https://factoriaf5.org/" target="_blank">Download</a></li>
                         </ul>
                 </nav>
                 </section>
@@ -109,6 +109,7 @@
                                 </div>
                         </article>
                 </section>
+                <a id="features"></a>
                 <section class="calendar">
                         <div class="calendar__div">
                                 <article class="calendar__text">
@@ -139,6 +140,7 @@
                                 </article>
                         </div>
                 </section>
+                <a id="screen"></a>
                 <section class="user">
                         <div class="user__div">
                                 <section>
@@ -232,6 +234,7 @@
                                 </article>
                         </div>
                 </section>
+                <a id="extras"></a>
                 <section class="secondPhone">
                         <div class="secondPhone__caja">
                                 <article class="secondPhone__rombo">
@@ -254,10 +257,11 @@
                         </div>
                 </section>
         </main>
-        <!-- <footer class="footer">
+        <footer class="footer">
                 <h2 class="hastaAquiLlegue">
                         Hasta aqui llegue
                 </h2>
-        </footer> -->
+        </footer>
 </body>
+<script src="./js/menu.js"></script>
 </html>
